--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Convert HTML5 page to pdf or image with Puppeteer",
   "main": "index.js",
   "scripts": {
+    "docker.build": "docker build . -t s3pweb/html5-to-pdf-with-puppeteer",
+    "docker.run": "docker run -p 3000:80 s3pweb/html5-to-pdf-with-puppeteer",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
