--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/sguilly/html5-to-pdf-with-Puppeteer#readme",
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "delay": "^5.0.0",
     "express": "^4.17.1",
     "express-swaggerize-ui": "^1.1.0",
