--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Convert HTML5 page to pdf or image with Puppeteer",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "docker.build": "docker build . -t s3pweb/html5-to-pdf-with-puppeteer",
     "docker.push": "docker push s3pweb/html5-to-pdf-with-puppeteer",
-    "docker.run": "docker run -p 3000:80 s3pweb/html5-to-pdf-with-puppeteer",
+    "docker.run": "docker run -p 15001:80 s3pweb/html5-to-pdf-with-puppeteer",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sguilly/html5-to-pdf-with-Puppeteer.git"
+    "url": "git+https://github.com/s3pweb/html5-to-pdf-with-Puppeteer.git"
   },
   "keywords": [
     "html",
@@ -27,10 +28,11 @@
   },
   "homepage": "https://github.com/sguilly/html5-to-pdf-with-Puppeteer#readme",
   "dependencies": {
-    "abort-controller": "^3.0.0",
+    "debug": "^4.3.4",
     "delay": "^5.0.0",
     "express": "^4.17.1",
     "express-swaggerize-ui": "^1.1.0",
+    "mustache": "^4.2.0",
     "openapi-backend": "^4.1.0",
     "pause": "^0.1.0",
     "puppeteer": "^5.5.0",
