--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html5-to-pdf-with-puppeteer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Convert HTML5 page to pdf or image with Puppeteer",
   "main": "index.js",
   "scripts": {
@@ -28,18 +28,18 @@
   },
   "homepage": "https://github.com/sguilly/html5-to-pdf-with-Puppeteer#readme",
   "dependencies": {
-    "debug": "^4.3.4",
-    "delay": "^5.0.0",
-    "express": "^4.17.1",
-    "express-swaggerize-ui": "^1.1.0",
-    "mustache": "^4.2.0",
-    "openapi-backend": "^4.1.0",
-    "pause": "^0.1.0",
-    "puppeteer": "^5.5.0",
-    "puppeteer-cluster": "^0.22.0",
-    "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-dist": "^3.50.0",
-    "swagger-ui-express": "^4.1.6"
+    "debug": "4.3.4",
+    "delay": "5.0.0",
+    "express": "4.18.1",
+    "express-swaggerize-ui": "1.1.0",
+    "mustache": "4.2.0",
+    "openapi-backend": "5.3.0",
+    "pause": "0.1.0",
+    "puppeteer": "14.1.0",
+    "puppeteer-cluster": "0.23.0",
+    "swagger-jsdoc": "6.2.1",
+    "swagger-ui-dist": "4.11.0",
+    "swagger-ui-express": "4.4.0"
   },
   "devDependencies": {
     "node-fetch": "^2.6.1"
