--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Convert HTML5 page to pdf or image with Puppeteer",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon src/server.js",
     "docker.build": "docker build . -t s3pweb/html5-to-pdf-with-puppeteer",
     "docker.push": "docker push s3pweb/html5-to-pdf-with-puppeteer",
     "docker.run": "docker run -p 15001:80 s3pweb/html5-to-pdf-with-puppeteer",
@@ -42,6 +42,7 @@
     "swagger-ui-express": "4.4.0"
   },
   "devDependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "2.6.1",
+    "nodemon": "2.0.22"
   }
 }
